--- a/.gitignore
+++ b/.gitignore
@@ -444,6 +444,9 @@ gradle-app.setting
 
 ##### Composer
 composer.phar
+/vendor/
+/vendor/composer/
+/vendor/gabordemooij/
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
